# opbase

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  README.md  SECURITY.md  Third_Party_Open_Source_Software_Notice  build.sh  classify_rule.yaml  install_deps.sh  version.info
aicpu_common/context/: CMakeLists.txt
aicpu_common/context/common/: async_cpu_kernel.cc  async_event_util.cc  context.cc  cpu_kernel_cache.cc  cpu_kernel_register.cc  cpu_kernel_utils.cc  device.cc  device_cpu_kernel.cc  device_sharder.cc  eigen_threadpool.cc  eigen_threadpool_embedding.cc  host_sharder.cc  node_def_builder.cpp
aicpu_common/context/cpu_proto/: attr_value.cc  attr_value_impl.cc  node_def.cc  node_def_impl.cc  tensor.cc  tensor_impl.cc  tensor_shape.cc  tensor_shape_impl.cc
aicpu_common/context/cpu_proto/proto/: cpu_attr.proto  cpu_node_def.proto  cpu_tensor.proto  cpu_tensor_shape.proto
aicpu_common/context/cust_op/: cust_cpu_utils.h  cust_dlog_record.cc  cust_dlog_record.h  cust_op_log.cc
aicpu_common/context/device/: CMakeLists.txt
aicpu_common/context/host/: CMakeLists.txt
aicpu_common/context/utils/: bcast.cc  eigen_tensor.cc  kernel_util.cc
aicpu_common/folding/: CMakeLists.txt  folding.cc
src/nnopbase/: CMakeLists.txt
src/nnopbase/aicpu/: CMakeLists.txt
src/nnopbase/aicpu/cpu_proto/: cpu_attr.proto  cpu_node_def.proto  cpu_tensor.proto  cpu_tensor_shape.proto
src/nnopbase/aicpu/proto/: attr_value.proto  fwk_adapter.proto  node_def.proto  resource_handle.proto  tensor.proto  tensor_shape.proto  types.proto
src/nnopbase/aicpu/task_handler/: aicpu_any_value.cpp  aicpu_args_handler.cpp  aicpu_ext_info_handle.cpp  aicpu_json_load_manager.cpp  aicpu_json_load_manager.h  aicpu_task.cpp  aicpu_task_base.cpp  ops_json_parse.cpp  ops_json_parse.h  ops_struct.h
src/nnopbase/common/: CMakeLists.txt
src/nnopbase/common/api/: acl_op_api.cpp  aclnn_init.cpp
src/nnopbase/common/inc/: acl_tensor_traits.h  block_pool.h  block_store.h  bridge_dfx.h  bridge_graph.h  bridge_pool.h  common_utils.h  dlopen_api.h  file_utils.h  individual_op_api.h  individual_op_internal.h  kernel_graph.h  kernel_graph_utils.h  kernel_launcher.h  kernel_mgr.h  kernel_node.h  kernel_tensor.h  kernel_utils.h  launch_arg_info.h  lock_free_queue.h  memory_allocator.h  op_cache_internal.h  op_dfx_internal.h  op_dfx_util.h  op_info_serialize.h  opp_resource_loader.h  thread_local_context.h  type_utils.h
src/nnopbase/common/op_info_record/: CMakeLists.txt  bin_to_json.cpp  bin_to_json.h  dump_tool_config.ini  ini_parse.cpp  ini_parse.h  lib_path.cpp  lib_path.h  op_info_serialize.cpp  path.cpp  path.h  tiling_context_to_json.cpp  tiling_context_to_json.h  utils.cpp  utils.h
src/nnopbase/common/utils/: bridge_dfx.cpp  bridge_graph.cpp  bridge_pool.cpp  common_types.cpp  data_type_utils.cpp  format_utils.cpp  kernel_graph.cpp  kernel_node.cpp  kernel_tensor.cpp  object.cpp  op_cache.cpp  shape_utils.cpp
src/nnopbase/composite_op/: CMakeLists.txt
src/nnopbase/composite_op/aclnn_engine/: dsa_task.cpp  dsa_task.h  fp16_t.cpp  infershape_context_holder.cpp  infershape_context_holder.h  kernel_arg.cpp  kernel_arg.h  kernel_context_holder.cpp  kernel_context_holder.h  kernel_mgr.cpp  kernel_utils.cpp  kernel_workspace.cpp  kernel_workspace.h  launcher_ctx.cpp  launcher_ctx.h  memset_ctx_holder.cpp  memset_ctx_holder.h  memset_op.cpp  memset_op.h  non_finite_check_op.cpp  non_finite_check_op.h  op_arg_def.cpp  op_ctx_def.h  op_dfx.cpp  op_executor.cpp  op_kernel.cpp  op_kernel.h  op_kernel_bin.cpp  op_kernel_lib.cpp  op_kernel_lib.h  op_run_context.cpp  op_run_context.h  outshape.cpp  outshape.h  rts_arg.cpp  rts_arg.h  shape_inference.cpp  shape_inference.h  tiling_parse_ctx_holder.cpp  tiling_parse_ctx_holder.h  (+3 more)
src/nnopbase/composite_op/lib_loader/: op_proto_loader.cpp  op_proto_loader.h  op_tiling_loader.cpp  op_tiling_loader.h  opp_resource_loader.cpp
src/nnopbase/composite_op/log/: op_error_manager.cpp
src/nnopbase/composite_op/mem_mgr/: block_pool.cpp  block_store.cpp  huge_mem.cpp  huge_mem.h  kernel_graph_utils.cpp  memory_allocator.cpp  pool_allocator.cpp
src/nnopbase/composite_op/utils/: file_utils.cpp  op_def.cpp  op_dfx_cache.cpp  platform.cpp  string_utils.cpp  string_utils.h  tensor_view_utils.cpp
src/nnopbase/individual_op/: CMakeLists.txt
src/nnopbase/individual_op/api/: individual_op_api.cpp  individual_op_fallback.cpp
src/nnopbase/individual_op/executor/: indv_args.cpp  indv_args.h  indv_args_pool.cpp  indv_args_pool.h  indv_bininfo.cpp  indv_bininfo.h  indv_collecter.cpp  indv_collecter.h  indv_compute_node_info.cpp  indv_compute_node_info.h  indv_dump.cpp  indv_executor.cpp  indv_executor.h  indv_executor_ext.cpp  indv_executor_tensor.cpp  indv_executor_utils.h  indv_mc2_aicpu.cpp  indv_mc2_aicpu.h  indv_non_finite_check_op.cpp  indv_non_finite_check_op.h  indv_profiling.cpp  indv_tilingcontext_builder.cpp  indv_tilingcontext_builder.h  indv_update_tensor.cpp
src/nnopbase/individual_op/utils/: indv_base.cpp  indv_base.h  indv_debug_assert.h  indv_dlist.h  indv_guard.h  indv_hash.cpp  indv_hash.h  indv_lib_wrapper.h  indv_linux.cpp  indv_linux.h  indv_path.cpp  indv_path.h  indv_types.h  thread_var_container.cpp  thread_var_container.h
src/nnopbase/stub/: CMakeLists.txt  gen_stubapi.py
src/nnopbase/tls_guardian/: CMakeLists.txt  tls_guardian.cpp  tls_guardian.h
tests/: CMakeLists.txt
tests/nnopbase/: CMakeLists.txt
tests/nnopbase/common/utils/: file_faker.cpp  file_faker.h
tests/nnopbase/st/: CMakeLists.txt  main.cpp
tests/nnopbase/st/composite_op/: test_acl_op_api.cpp  test_bfloat16.cpp  test_binary_resuse.cpp  test_common_types.cpp  test_data_type_utils.cpp  test_debug_kernel.cpp  test_dsa.cpp  test_dump.cpp  test_error_manager.cpp  test_format_utils.cpp  test_fp16_t.cpp  test_framework_op.cpp  test_graph_topo.cpp  (+14 more)
tests/nnopbase/ut/: CMakeLists.txt  main.cpp
tests/op_common/: CMakeLists.txt
tests/op_common/ut/: test_log.cpp  test_util.cpp
tests/ut/: CMakeLists.txt
tests/ut/op_common/: test_log.cpp  test_util.cpp
(+576 files in other folders)
